// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when loading 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <div
      className="MuiCircularProgress-root-2 MuiCircularProgress-colorSecondary-4"
      role="progressbar"
      style={
        Object {
          "height": 40,
          "width": 40,
        }
      }
    >
      <svg
        className="MuiCircularProgress-svg-5 MuiCircularProgress-svgIndeterminate-6"
        viewBox="0 0 50 50"
      >
        <circle
          className="MuiCircularProgress-circle-7 MuiCircularProgress-circleIndeterminate-8"
          cx={25}
          cy={25}
          fill="none"
          r={20}
          strokeWidth={3.6}
          style={Object {}}
        />
      </svg>
    </div>
    <p
      className="MuiTypography-root-9 MuiTypography-body1-18"
    >
      Loading...
    </p>
  </div>
</div>
`;

exports[`renders correctly when metadata loaded and attributes loaded 1`] = `
<div
  className="BlockDetails-progressContainer-1"
/>
`;

exports[`renders correctly when metadata loaded and waiting for attributes 1`] = `
<div
  className="BlockDetails-progressContainer-1"
>
  <div>
    <div>
      <p
        className="MuiTypography-root-9 MuiTypography-body1-18"
      >
        Loading attributes...
      </p>
      <div
        className="FieldsLoading-loadingRow-33"
      >
        <div
          className="MuiCircularProgress-root-2 MuiCircularProgress-colorSecondary-4 FieldsLoading-progress-35"
          role="progressbar"
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-5 MuiCircularProgress-svgIndeterminate-6"
            viewBox="0 0 50 50"
          >
            <circle
              className="MuiCircularProgress-circle-7 MuiCircularProgress-circleIndeterminate-8"
              cx={25}
              cy={25}
              fill="none"
              r={20}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
        <p
          className="MuiTypography-root-9 MuiTypography-body1-18 FieldsLoading-fieldName-34"
        >
          health
        </p>
      </div>
      <div
        className="FieldsLoading-loadingRow-33"
      >
        <div
          className="MuiCircularProgress-root-2 MuiCircularProgress-colorSecondary-4 FieldsLoading-progress-35"
          role="progressbar"
          style={
            Object {
              "height": 20,
              "width": 20,
            }
          }
        >
          <svg
            className="MuiCircularProgress-svg-5 MuiCircularProgress-svgIndeterminate-6"
            viewBox="0 0 50 50"
          >
            <circle
              className="MuiCircularProgress-circle-7 MuiCircularProgress-circleIndeterminate-8"
              cx={25}
              cy={25}
              fill="none"
              r={20}
              strokeWidth={3.6}
              style={Object {}}
            />
          </svg>
        </div>
        <p
          className="MuiTypography-root-9 MuiTypography-body1-18 FieldsLoading-fieldName-34"
        >
          icon
        </p>
      </div>
    </div>
  </div>
</div>
`;
